--- a/Dr Angela/CSS - My Site/index.html
+++ b/Dr Angela/CSS - My Site/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,33 +17,33 @@
         <h1>I'm Nathan</h1>
         <h2 class="subheading">A <span>Pro</span>grammer</h2>
         <img src="images/cloud.png" alt="cloud-img" class="bottom-cloud">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="mountainImg" src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
           <img class="mePic" src="images/115851815_3091236567579684_149601132811460603_o.jpg" alt="">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="meDescription">I am an aspiring full stack web developer! I have a German Shepherd named Tater. I love beer and play way too many video games.</p>
         </div>
         <hr>
         <div class="skills">
-          <h2>My Skills.</h2>
-          <div class="skill-row">
-            <img class="imgSkills" src="images/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" alt="">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h2>My Skills and Hobbies.</h2>
+          <div class="skill-row1">
+            <img class="imgSkills1" src="images/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" alt="">
+            <h3>Web Design and Coding</h3>
+            <p class="codeSkillDescription">I am still in my beginner stages of learning how to design and code. I have almost completed Colt Steele's Udemy Web Development Bootcamp and have recently started Dr. Angelas. I have also self taught myself some Python in order to achieve tasks at my current job as an IT Analyst at Virginia Commonwealth University.</p>
           </div>
-          <div class="skill-row">
-            <img class="imgSkills" src="images/markus-spiske-sFydXGrt5OA-unsplash.jpg" alt="">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <div class="skill-row2">
+            <img class="imgSkills2" src="images/markus-spiske-sFydXGrt5OA-unsplash.jpg" alt="">
+            <h3>Gardening</h3>
+            <p class="gardenSkillDescription">When the weather is right I really enjoy being outside tending to a garden. There is some real satisfaction when you get to see months of work turn into the fruit of your labor :) I mainly have grown tomatoes in the past but with recently purchasing my own home I plan to have a much bigger garden with a bit more variety.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>Please contact me for freelance work, gardening tips or your favorite beer I should try!</h3>
+          <p class="contact">I am currently looking for any and all beginner level Web Development jobs and can also help with any automation software you may need.</p>
           <a class="btn" href="mailto:theill123@email.com">CONTACT ME</a>
         </div>
       </div>
@@ -51,7 +53,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/nathan-pittard-846423151/">LinkedIn</a>
         <a class="footer-link" href="https://www.instagram.com/nathanpittard/?hl=en">Instagram</a>
         <a class="footer-link" href="https://github.com/Npittard">GitHub</a>
-        <p>© 2021 Nathan Pittard.</p>
+        <p class="copyright">© 2021 Nathan Pittard.</p>
       </div>
           
 
